# todoist-template

./: .gitignore  LICENSE  MANIFEST.in  Makefile  config.toml  configure  devrequirements.txt  makeutils.py  pyproject.toml  requirements.txt  setup.py  todoist-template.py  todoist_template.py  todoist_template_cli.py
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
.make/: colors.mk  git.mk  misc.mk  py.mk  testenv.py  user.sample.mk
docs/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  README.md  SECURITY.md  install.md
lib/: CustomYamlLoader.py  __version__.py  argparse.py  cli.py  config.py  gui.py  i18n.py  key_ring.py  placeholders.py  template.py  todoist.py  todoist_template.py  utils.py
makeutils/: makeutils.py
templates/: complex_template_0.yml  complex_template_1.yml  include_template_0.yml  param_template_0.yml  param_template_1.yml  param_template_2.yml  param_template_3.yml  simple_template_0.yml  simple_template_1.yml  simple_template_2.json  simple_template_3.yml  template_sample.yml  template_sample2.yml
tests/: placeholders.csv  test.csv  test.json  test.yml  test2.yml  test3.yml  test_apikey.py  test_argparse.py  test_config.py  test_csv_loader.py  test_json_loader.py  test_keyring.py  test_loader.py  test_options.py  test_placeholders.py  test_run.py  test_template.py  test_utils.py  test_yaml_loader.py
todoist-template/: __version__.py
todoist_template/: __init__.py
ui/: .eslintrc.json  angular.json  karma.conf.js  package.json
(+78 files in other folders)
