[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todoist_template"
description = "Easily add tasks to Todoist with custom templates."
readme = "docs/README.md"
requires-python = ">=3.8"
keywords = ["todoist", "task", "organizer"]
license = {text = "MIT"}
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Environment :: Console',
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Topic :: Communications :: Email',
    'Topic :: Office/Business',
    'Topic :: Software Development :: Bug Tracking'
]
dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["."]
include = ["todoist_template*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "todoist_template.VERSION"}
dependencies = {file = "requirements.txt"}